@@ -18,6 +18,7 @@ Version 1.4.23 - SVN
     outgoing messages
   - Fixed issue with Noselect mailboxes being clickable in folder list
   - Made performance improvements in mailbox listing
+  - Attachment filename extensions changed from ".msg" to ".eml"
 
 Version 1.4.22 - 12 July 2011
 -----------------------------
